[project]
name = "vessel"
version = "0.1.0"
description = "Podman orchestration API"
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "podman>=5.4.0.1",
    "pydantic-settings>=2.9.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
