[project]
name = "vessel"
version = "0.1.0"
description = "Podman orchestration API"
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "colorlog>=6.9.0",
    "fastapi[standard]>=0.115.12",
    "podman>=5.4.0.1",
    "pydantic-settings>=2.9.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "types-requests>=2.32.0.20250328",
]

[tool.mypy]
files = ["app", "tests"]
